remove animated hovers; change user phone to user mail; fix gap for street in footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -214,6 +214,13 @@ body {
     }
 }
 
+.ba-btn-consult:hover, 
+.ba-menu-btn:hover, 
+.ba-btn-more:hover, 
+.ba-btn-submit:hover {
+    opacity: 0.75;
+}
+
 .ba-lang {
 
     &-wrap {
